--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<version>1.3.RC2</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>16.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
