--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 		    <artifactId>guava</artifactId>
 		    <version>16.0.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
