--- a/pom.xml
+++ b/pom.xml
@@ -111,13 +111,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.11</version>
+				<version>2.17</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<forkMode>once</forkMode>
-					<includes>
-						<include>**/*Test.java</include>
-					</includes>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 					<argLine>-Xmx1024m</argLine>
 				</configuration>
 			</plugin>
