[maven-release-plugin] prepare release v0.1.7

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gr.skroutz</groupId>
 	<artifactId>elasticsearch-analysis-turkishstemmer</artifactId>
-	<version>0.1.7-SNAPSHOT</version>
+	<version>0.1.7</version>
 	<description>Turkish stemmer for ElasticSearch</description>
 	<inceptionYear>2014</inceptionYear>
 
