--- a/src/main/assemblies/plugin.xml
+++ b/src/main/assemblies/plugin.xml
@@ -7,7 +7,7 @@
     <includeBaseDirectory>false</includeBaseDirectory>
     <dependencySets>
         <dependencySet>
-            <outputDirectory>/</outputDirectory>
+            <outputDirectory>elasticsearch/</outputDirectory>
             <useProjectArtifact>true</useProjectArtifact>
             <useTransitiveFiltering>true</useTransitiveFiltering>
             <excludes>
@@ -19,7 +19,7 @@
     <fileSets>
         <fileSet>
             <directory>${basedir}/src/main/resources/</directory>
-            <outputDirectory>/</outputDirectory>
+            <outputDirectory>elasticsearch/</outputDirectory>
             <includes>
                 <include>*.properties</include>
             </includes>
