Simplify the analysis test by leveraging the elastic test framework
We need to specify it as a dependency as well.

https://www.elastic.co/guide/en/elasticsearch/reference/current/using-elasticsearch-test-classes.html
https://github.com/elastic/elasticsearch/blob/v5.1.2/test/framework/src/main/java/org/elasticsearch/test/ESTestCase.java

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.elasticsearch.test</groupId>
+			<artifactId>framework</artifactId>
+			<version>${elasticsearch.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8.8</version>
