--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gr.skroutz</groupId>
 	<artifactId>elasticsearch-analysis-turkishstemmer</artifactId>
-	<version>5.4.2.1</version>
+	<version>5.4.2.2-SNAPSHOT</version>
 	<description>Turkish stemmer for ElasticSearch</description>
 	<inceptionYear>2014</inceptionYear>
 
