--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gr.skroutz</groupId>
 	<artifactId>elasticsearch-analysis-turkishstemmer</artifactId>
-	<version>2.4.4.2</version>
+	<version>2.4.4.3-SNAPSHOT</version>
 	<description>Turkish stemmer for ElasticSearch</description>
 	<inceptionYear>2014</inceptionYear>
 
