--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gr.skroutz</groupId>
 	<artifactId>elasticsearch-analysis-turkishstemmer</artifactId>
-	<version>5.4.2.4-SNAPSHOT</version>
+	<version>${elasticsearch.version}.1-SNAPSHOT</version>
 	<description>Turkish stemmer for ElasticSearch</description>
 	<inceptionYear>2014</inceptionYear>
 
@@ -18,7 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<elasticsearch.version>5.4.2</elasticsearch.version>
+		<elasticsearch.version>7.7.0</elasticsearch.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.7</version>
+			<version>2.11.1</version>
 		</dependency>
 
 		<dependency>
@@ -86,16 +86,8 @@
 
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
+			<artifactId>hamcrest</artifactId>
+			<version>2.1</version>
 		</dependency>
 
 		<dependency>
@@ -152,7 +144,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.17</version>
         <configuration>
-          <encoding>UTF-8</encoding>
           <forkMode>once</forkMode>
           <suiteXmlFiles>
             <suiteXmlFile>testng.xml</suiteXmlFile>
