Update pom.xml attribution and README

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,16 @@
 				<role>developer</role>
 			</roles>
 		</developer>
+		<developer>
+			<id>enderian</id>
+			<name>Spyridon Pagkalos</name>
+			<email>spyridon.pagkalos@skroutz.gr</email>
+			<organization>Skroutz S.A.</organization>
+			<organizationUrl>http://www.skroutz.gr</organizationUrl>
+			<roles>
+				<role>developer</role>
+			</roles>
+		</developer>
 	</developers>
 
 	<scm>
